* Add validation to all forms. * custom style for validation error. * Update documentation.

--- a/styles/main/styles.css
+++ b/styles/main/styles.css
@@ -13,4 +13,29 @@
     font-size: 15px;
 }
 
+/*in case default validate is used without custom option*/
+label.error{
+    border: none;
+    background: none;
+    font-weight: normal;
+}
+
+span.message{
+    background: transparent url("./images/msg_arrow.gif") no-repeat scroll left center;
+    padding-left: 7px;
+}
+
+span.error{
+    background-color:#F3E6E6;
+    border-color: #924949;
+    border-style: solid solid solid none;
+    border-width: 2px;
+    padding: 5px;
+    margin: 0px;
+}
+
+input.error,select.error,textarea.error{
+  padding: 0px !important;
+}
+
 
