--- a/styles/modules/home/index.css
+++ b/styles/modules/home/index.css
@@ -3,50 +3,24 @@
    TODO customize this sample style
    Syntax recommendation http://www.w3.org/TR/REC-CSS2/
 */
-::selection{ background-color: #E13300; color: white; }
-::moz-selection{ background-color: #E13300; color: white; }
-::webkit-selection{ background-color: #E13300; color: white; }
-
-body {
-        background-color: #fff;
-        /*margin: 40px;*/
-        font: 13px/20px normal Helvetica, Arial, sans-serif;
-        color: #4F5155;
-}
-
-
-a {
-        color: #003399;
-        background-color: transparent;
-        font-weight: normal;
-}
-
-code {
-        font-family: Consolas, Monaco, Courier New, Courier, monospace;
-        font-size: 12px;
-        background-color: #f9f9f9;
-        border: 1px solid #D0D0D0;
-        color: #002166;
-        display: block;
-        /*margin: 14px 0 14px 0;
-        padding: 12px 10px 12px 10px;*/
-}
-
-#body{
-        margin: 0 15px 0 15px;
-}
-
-p.footer{
-        text-align: right;
-        font-size: 11px;
-        border-top: 1px solid #D0D0D0;
-        line-height: 32px;
-        /*padding: 0 10px 0 10px;
-        margin: 20px 0 0 0;*/
-}
-
-#container{
-        /*margin: 10px;
-        border: 1px solid #D0D0D0;*/
-        -webkit-box-shadow: 0 0 8px #D0D0D0;
+.leaderboard {  
+    padding: 60px;  
+    margin-bottom: 30px;  
+    background: #D9D9D9;  
+    background-repeat:repeat;  
+    -webkit-border-radius: 6px;  
+    -moz-border-radius: 6px;  
+    border-radius: 6px;  
+}  
+.leaderboard h1 {  
+    font-size: 40px;  
+    margin-bottom: 5px;  
+    line-height: 1;  
+    letter-spacing: -1px;  
+    color:#FF6600;  
+}  
+.leaderboard p {  
+    font-size: 18px;  
+    font-weight: 200;  
+    line-height: 27px;  
 }
